Compiler & OS/codegen/grammar.output
State 51 conflicts: 5 reduce/reduce
State 230 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: INT MAIN LPAREN RPAREN compound_statement

    2 type_specifier: VOID
    3               | CHAR
    4               | SHORT
    5               | INT
    6               | LONG
    7               | FLOAT
    8               | DOUBLE
    9               | SIGNED
   10               | UNSIGNED
   11               | struct_or_union_specifier
   12               | enum_specifier
   13               | TYPE_NAME

   14 compound_statement: LCURL var_declaration statements RCURL
   15                   | LCURL statements RCURL
   16                   | LCURL RCURL

   17 var_declaration: type_specifier declaration_list SEMICOLON
   18                | var_declaration type_specifier declaration_list SEMICOLON

   19 declaration_list: declaration_list COMMA ID
   20                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   21                 | ID
   22                 | ID LTHIRD CONST_INT RTHIRD

   23 statements: statement
   24           | statements statement

   25 statement: expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   36 struct_declaration_list: struct_declaration
   37                        | struct_declaration_list struct_declaration

   38 variable: ID
   39         | ID LTHIRD expression RTHIRD

   40 expression: logic_expression
   41           | variable ASSIGNOP logic_expression

   42 logic_expression: rel_expression
   43                 | rel_expression LOGICOP rel_expression

   44 rel_expression: simple_expression
   45               | simple_expression RELOP simple_expression

   46 type_qualifier: CONST
   47               | VOLATILE

   48 storage_class_specifier: TYPEDEF
   49                        | EXTERN
   50                        | STATIC
   51                        | AUTO
   52                        | REGISTER

   53 assignment_operator: '='

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression '|' exclusive_or_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression '^' and_expression

   58 type_qualifier_list: type_qualifier
   59                    | type_qualifier_list type_qualifier

   60 simple_expression: term
   61                  | simple_expression ADDOP term

   62 term: unary_expression
   63     | term MULOP unary_expression

   64 unary_expression: ADDOP unary_expression
   65                 | NOT unary_expression
   66                 | factor

   67 and_expression: equality_expression
   68               | and_expression '&' equality_expression

   69 equality_expression: relational_expression
   70                    | equality_expression EQ_OP relational_expression
   71                    | equality_expression NE_OP relational_expression

   72 struct_or_union: STRUCT
   73                | UNION

   74 struct_declarator: declarator
   75                  | ':' constant_expression
   76                  | declarator ':' constant_expression

   77 identifier_list: IDENTIFIER
   78                | identifier_list ',' IDENTIFIER

   79 relational_expression: shift_expression
   80                      | relational_expression '<' shift_expression
   81                      | relational_expression '>' shift_expression
   82                      | relational_expression LE_OP shift_expression
   83                      | relational_expression GE_OP shift_expression

   84 shift_expression: additive_expression
   85                 | shift_expression LEFT_OP additive_expression
   86                 | shift_expression RIGHT_OP additive_expression

   87 factor: variable
   88       | LPAREN expression RPAREN
   89       | CONST_INT
   90       | CONST_FLOAT
   91       | CONST_CHAR
   92       | factor INCOP
   93       | factor DECOP

   94 declaration_specifiers: storage_class_specifier
   95                       | storage_class_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_specifier declaration_specifiers
   98                       | type_qualifier
   99                       | type_qualifier declaration_specifiers

  100 parameter_list: parameter_declaration
  101               | parameter_list ',' parameter_declaration

  102 parameter_declaration: declaration_specifiers declarator
  103                      | declaration_specifiers abstract_declarator
  104                      | declaration_specifiers

  105 parameter_type_list: parameter_list

  106 logical_and_expression: inclusive_or_expression
  107                       | logical_and_expression AND_OP inclusive_or_expression

  108 additive_expression: multiplicative_expression
  109                    | additive_expression '+' multiplicative_expression
  110                    | additive_expression '-' multiplicative_expression

  111 multiplicative_expression: cast_expression
  112                          | multiplicative_expression '*' cast_expression
  113                          | multiplicative_expression '/' cast_expression
  114                          | multiplicative_expression '%' cast_expression

  115 cast_expression: unary_expression
  116                | '(' type_name ')' cast_expression

  117 type_name: specifier_qualifier_list
  118          | specifier_qualifier_list abstract_declarator

  119 specifier_qualifier_list: type_specifier specifier_qualifier_list
  120                         | type_specifier
  121                         | type_qualifier specifier_qualifier_list
  122                         | type_qualifier

  123 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  124                          | struct_or_union '{' struct_declaration_list '}'
  125                          | struct_or_union IDENTIFIER

  126 struct_declarator_list: struct_declarator
  127                       | struct_declarator_list ',' struct_declarator

  128 enumerator_list: enumerator
  129                | enumerator_list ',' enumerator

  130 logical_or_expression: logical_and_expression
  131                      | logical_or_expression OR_OP logical_and_expression

  132 constant_expression: conditional_expression

  133 conditional_expression: logical_or_expression
  134                       | logical_or_expression '?' expression ':' conditional_expression

  135 expression: assignment_expression
  136           | expression ',' assignment_expression

  137 assignment_expression: conditional_expression
  138                      | unary_expression assignment_operator assignment_expression

  139 enum_specifier: ENUM '{' enumerator_list '}'
  140               | ENUM IDENTIFIER '{' enumerator_list '}'
  141               | ENUM IDENTIFIER

  142 enumerator: IDENTIFIER
  143           | IDENTIFIER '=' constant_expression

  144 abstract_declarator: pointer
  145                    | direct_abstract_declarator
  146                    | pointer direct_abstract_declarator

  147 direct_abstract_declarator: '(' abstract_declarator ')'
  148                           | '[' ']'
  149                           | '[' constant_expression ']'
  150                           | direct_abstract_declarator '[' ']'
  151                           | direct_abstract_declarator '[' constant_expression ']'
  152                           | '(' ')'
  153                           | '(' parameter_type_list ')'
  154                           | direct_abstract_declarator '(' ')'
  155                           | direct_abstract_declarator '(' parameter_type_list ')'

  156 pointer: '*'
  157        | '*' type_qualifier_list
  158        | '*' pointer
  159        | '*' type_qualifier_list pointer

  160 declarator: pointer direct_declarator
  161           | direct_declarator

  162 direct_declarator: IDENTIFIER
  163                  | '(' declarator ')'
  164                  | direct_declarator '[' constant_expression ']'
  165                  | direct_declarator '[' ']'
  166                  | direct_declarator '(' parameter_type_list ')'
  167                  | direct_declarator '(' identifier_list ')'
  168                  | direct_declarator '(' ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 114
'&' (38) 68
'(' (40) 116 147 152 153 154 155 163 166 167 168
')' (41) 116 147 152 153 154 155 163 166 167 168
'*' (42) 112 156 157 158 159
'+' (43) 109
',' (44) 78 101 127 129 136
'-' (45) 110
'/' (47) 113
':' (58) 75 76 134
';' (59) 35
'<' (60) 80
'=' (61) 53 143
'>' (62) 81
'?' (63) 134
'[' (91) 148 149 150 151 164 165
']' (93) 148 149 150 151 164 165
'^' (94) 57
'{' (123) 123 124 139 140
'|' (124) 55
'}' (125) 123 124 139 140
error (256)
RCURL (258) 14 15 16
LCURL (259) 14 15 16
SEMICOLON (260) 17 18 31 32 33 34
INT (261) 1 5
FLOAT (262) 7
CHAR (263) 3
COMMA (264) 19 20
TYPEDEF (265) 48
ID (266) 19 20 21 22 31 38 39
LTHIRD (267) 20 22 39
CONST (268) 46
RTHIRD (269) 20 22 39
FOR (270) 27
LPAREN (271) 1 27 28 29 30 31 88
RPAREN (272) 1 27 28 29 30 31 88
IF (273) 28 29
STATIC (274) 50
ELSE (275) 29
WHILE (276) 30
PRINTLN (277) 31
RETURN (278) 32
ASSIGNOP (279) 41
LOGICOP (280) 43
REGISTER (281) 52
RELOP (282) 45
ADDOP (283) 61 64
MULOP (284) 63
NOT (285) 65
INCOP (286) 92
DECOP (287) 93
CONST_CHAR (288) 91
CONST_INT (289) 20 22 89
CONST_FLOAT (290) 90
MAIN (291) 1
TYPE_NAME (292) 13
VOLATILE (293) 47
AUTO (294) 51
VOID (295) 2
SHORT (296) 4
LONG (297) 6
DOUBLE (298) 8
SIGNED (299) 9
UNSIGNED (300) 10
EXTERN (301) 49
ENUM (302) 139 140 141
IDENTIFIER (303) 77 78 123 125 140 141 142 143 162
STRUCT (304) 72
UNION (305) 73
OR_OP (306) 131
AND_OP (307) 107
EQ_OP (308) 70
GE_OP (309) 83
LEFT_OP (310) 85
LE_OP (311) 82
NE_OP (312) 71
RIGHT_OP (313) 86


Nonterminals, with rules where they appear

$accept (80)
    on left: 0
Program (81)
    on left: 1, on right: 0
type_specifier (82)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13, on right: 17 18 96 97 119
    120
compound_statement (83)
    on left: 14 15 16, on right: 1 26
var_declaration (84)
    on left: 17 18, on right: 14 18
declaration_list (85)
    on left: 19 20 21 22, on right: 17 18 19 20
statements (86)
    on left: 23 24, on right: 14 15 24
statement (87)
    on left: 25 26 27 28 29 30 31 32, on right: 23 24 27 28 29 30
expression_statement (88)
    on left: 33 34, on right: 25 27
struct_declaration (89)
    on left: 35, on right: 36 37
struct_declaration_list (90)
    on left: 36 37, on right: 37 123 124
variable (91)
    on left: 38 39, on right: 41 87
expression (92)
    on left: 40 41 135 136, on right: 27 28 29 30 32 34 39 88 134 136
logic_expression (93)
    on left: 42 43, on right: 40 41
rel_expression (94)
    on left: 44 45, on right: 42 43
type_qualifier (95)
    on left: 46 47, on right: 58 59 98 99 121 122
storage_class_specifier (96)
    on left: 48 49 50 51 52, on right: 94 95
assignment_operator (97)
    on left: 53, on right: 138
inclusive_or_expression (98)
    on left: 54 55, on right: 55 106 107
exclusive_or_expression (99)
    on left: 56 57, on right: 54 55 57
type_qualifier_list (100)
    on left: 58 59, on right: 59 157 159
simple_expression (101)
    on left: 60 61, on right: 44 45 61
term (102)
    on left: 62 63, on right: 60 61 63
unary_expression (103)
    on left: 64 65 66, on right: 62 63 64 65 115 138
and_expression (104)
    on left: 67 68, on right: 56 57 68
equality_expression (105)
    on left: 69 70 71, on right: 67 68 70 71
struct_or_union (106)
    on left: 72 73, on right: 123 124 125
struct_declarator (107)
    on left: 74 75 76, on right: 126 127
identifier_list (108)
    on left: 77 78, on right: 78 167
relational_expression (109)
    on left: 79 80 81 82 83, on right: 69 70 71 80 81 82 83
shift_expression (110)
    on left: 84 85 86, on right: 79 80 81 82 83 85 86
factor (111)
    on left: 87 88 89 90 91 92 93, on right: 66 92 93
declaration_specifiers (112)
    on left: 94 95 96 97 98 99, on right: 95 97 99 102 103 104
parameter_list (113)
    on left: 100 101, on right: 101 105
parameter_declaration (114)
    on left: 102 103 104, on right: 100 101
parameter_type_list (115)
    on left: 105, on right: 153 155 166
logical_and_expression (116)
    on left: 106 107, on right: 107 130 131
additive_expression (117)
    on left: 108 109 110, on right: 84 85 86 109 110
multiplicative_expression (118)
    on left: 111 112 113 114, on right: 108 109 110 112 113 114
cast_expression (119)
    on left: 115 116, on right: 111 112 113 114 116
type_name (120)
    on left: 117 118, on right: 116
specifier_qualifier_list (121)
    on left: 119 120 121 122, on right: 35 117 118 119 121
struct_or_union_specifier (122)
    on left: 123 124 125, on right: 11
struct_declarator_list (123)
    on left: 126 127, on right: 35 127
enumerator_list (124)
    on left: 128 129, on right: 129 139 140
logical_or_expression (125)
    on left: 130 131, on right: 131 133 134
constant_expression (126)
    on left: 132, on right: 75 76 143 149 151 164
conditional_expression (127)
    on left: 133 134, on right: 132 134 137
assignment_expression (128)
    on left: 137 138, on right: 135 136 138
enum_specifier (129)
    on left: 139 140 141, on right: 12
enumerator (130)
    on left: 142 143, on right: 128 129
abstract_declarator (131)
    on left: 144 145 146, on right: 103 118 147
direct_abstract_declarator (132)
    on left: 147 148 149 150 151 152 153 154 155, on right: 145 146
    150 151 154 155
pointer (133)
    on left: 156 157 158 159, on right: 144 146 158 159 160
declarator (134)
    on left: 160 161, on right: 74 76 102 163
direct_declarator (135)
    on left: 162 163 164 165 166 167 168, on right: 160 161 164 165
    166 167 168


State 0

    0 $accept: . Program $end

    INT  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: INT . MAIN LPAREN RPAREN compound_statement

    MAIN  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: INT MAIN . LPAREN RPAREN compound_statement

    LPAREN  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: INT MAIN LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 6


State 6

    1 Program: INT MAIN LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 7

    compound_statement  go to state 8


State 7

   14 compound_statement: LCURL . var_declaration statements RCURL
   15                   | LCURL . statements RCURL
   16                   | LCURL . RCURL

    RCURL        shift, and go to state 9
    LCURL        shift, and go to state 7
    SEMICOLON    shift, and go to state 10
    INT          shift, and go to state 11
    FLOAT        shift, and go to state 12
    CHAR         shift, and go to state 13
    ID           shift, and go to state 14
    FOR          shift, and go to state 15
    LPAREN       shift, and go to state 16
    IF           shift, and go to state 17
    WHILE        shift, and go to state 18
    PRINTLN      shift, and go to state 19
    RETURN       shift, and go to state 20
    ADDOP        shift, and go to state 21
    NOT          shift, and go to state 22
    CONST_CHAR   shift, and go to state 23
    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25
    TYPE_NAME    shift, and go to state 26
    VOID         shift, and go to state 27
    SHORT        shift, and go to state 28
    LONG         shift, and go to state 29
    DOUBLE       shift, and go to state 30
    SIGNED       shift, and go to state 31
    UNSIGNED     shift, and go to state 32
    ENUM         shift, and go to state 33
    STRUCT       shift, and go to state 34
    UNION        shift, and go to state 35
    '('          shift, and go to state 36

    type_specifier             go to state 37
    compound_statement         go to state 38
    var_declaration            go to state 39
    statements                 go to state 40
    statement                  go to state 41
    expression_statement       go to state 42
    variable                   go to state 43
    expression                 go to state 44
    logic_expression           go to state 45
    rel_expression             go to state 46
    inclusive_or_expression    go to state 47
    exclusive_or_expression    go to state 48
    simple_expression          go to state 49
    term                       go to state 50
    unary_expression           go to state 51
    and_expression             go to state 52
    equality_expression        go to state 53
    struct_or_union            go to state 54
    relational_expression      go to state 55
    shift_expression           go to state 56
    factor                     go to state 57
    logical_and_expression     go to state 58
    additive_expression        go to state 59
    multiplicative_expression  go to state 60
    cast_expression            go to state 61
    struct_or_union_specifier  go to state 62
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 65
    enum_specifier             go to state 66


State 8

    1 Program: INT MAIN LPAREN RPAREN compound_statement .

    $default  reduce using rule 1 (Program)


State 9

   16 compound_statement: LCURL RCURL .

    $default  reduce using rule 16 (compound_statement)


State 10

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


State 11

    5 type_specifier: INT .

    $default  reduce using rule 5 (type_specifier)


State 12

    7 type_specifier: FLOAT .

    $default  reduce using rule 7 (type_specifier)


State 13

    3 type_specifier: CHAR .

    $default  reduce using rule 3 (type_specifier)


State 14

   38 variable: ID .
   39         | ID . LTHIRD expression RTHIRD

    LTHIRD  shift, and go to state 67

    $default  reduce using rule 38 (variable)


State 15

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 68


State 16

   88 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 14
    LPAREN       shift, and go to state 16
    ADDOP        shift, and go to state 21
    NOT          shift, and go to state 22
    CONST_CHAR   shift, and go to state 23
    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25
    '('          shift, and go to state 36

    variable                   go to state 43
    expression                 go to state 69
    logic_expression           go to state 45
    rel_expression             go to state 46
    inclusive_or_expression    go to state 47
    exclusive_or_expression    go to state 48
    simple_expression          go to state 49
    term                       go to state 50
    unary_expression           go to state 51
    and_expression             go to state 52
    equality_expression        go to state 53
    relational_expression      go to state 55
    shift_expression           go to state 56
    factor                     go to state 57
    logical_and_expression     go to state 58
    additive_expression        go to state 59
    multiplicative_expression  go to state 60
    cast_expression            go to state 61
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 65


State 17

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 70


State 18

   30 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 71


State 19

   31 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 72


State 20

   32 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 14
    LPAREN       shift, and go to state 16
    ADDOP        shift, and go to state 21
    NOT          shift, and go to state 22
    CONST_CHAR   shift, and go to state 23
    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25
    '('          shift, and go to state 36

    variable                   go to state 43
    expression                 go to state 73
    logic_expression           go to state 45
    rel_expression             go to state 46
    inclusive_or_expression    go to state 47
    exclusive_or_expression    go to state 48
    simple_expression          go to state 49
    term                       go to state 50
    unary_expression           go to state 51
    and_expression             go to state 52
    equality_expression        go to state 53
    relational_expression      go to state 55
    shift_expression           go to state 56
    factor                     go to state 57
    logical_and_expression     go to state 58
    additive_expression        go to state 59
    multiplicative_expression  go to state 60
    cast_expression            go to state 61
    logical_or_expression      go to state 63
    conditional_expression     go to state 64
    assignment_expression      go to state 65


State 21

   64 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 14
    LPAREN       shift, and go to state 16
    ADDOP        shift, and go to state 21
    NOT          shift, and go to state 22
    CONST_CHAR   shift, and go to state 23
    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25

    variable          go to state 74
    unary_expression  go to state 75
    factor            go to state 57


State 22

   65 unary_expression: NOT . unary_expression

    ID           shift, and go to state 14
    LPAREN       shift, and go to state 16
    ADDOP        shift, and go to state 21
    NOT          shift, and go to state 22
    CONST_CHAR   shift, and go to state 23
    CONST_INT    shift, and go to state 24
    CONST_FLOAT  shift, and go to state 25

    variable          go to state 74
    unary_expression  go to state 76
    factor            go to state 57


State 23

   91 factor: CONST_CHAR .

    $default  reduce using rule 91 (factor)


State 24

   89 factor: CONST_INT .

    $default  reduce using rule 89 (factor)


State 25

   90 factor: CONST_FLOAT .

    $default  reduce using rule 90 (factor)


State 26

   13 type_specifier: TYPE_NAME .

    $default  reduce using rule 13 (type_specifier)


State 27

    2 type_specifier: VOID .

    $default  reduce using rule 2 (type_specifier)


State 28

    4 type_specifier: SHORT .

    $default  reduce using rule 4 (type_specifier)


State 29

    6 type_specifier: LONG .

    $default  reduce using rule 6 (type_specifier)


State 30

    8 type_specifier: DOUBLE .

    $default  reduce using rule 8 (type_specifier)


State 31

    9 type_specifier: SIGNED .

    $default  reduce using rule 9 (type_specifier)


State 32

   10 type_specifier: UNSIGNED .

    $default  reduce using rule 10 (type_specifier)


State 33

  139 enum_specifier: ENUM . '{' enumerator_list '}'
  140               | ENUM . IDENTIFIER '{' enumerator_list '}'
  141               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 77
    '{'         shift, and go to state 78


State 34

   72 struct_or_union: STRUCT .

    $default  reduce using rule 72 (struct_or_union)


State 35

   73 struct_or_union: UNION .

    $default  reduce using rule 73 (struct_or_union)


State 36

  116 cast_expression: '(' . type_name ')' cast_expression

    INT        shift, and go to state 11
    FLOAT      shift, and go to state 12
    CHAR       shift, and go to state 13
    CONST      shift, and go to state 79
    TYPE_NAME  shift, and go to state 26
    VOLATILE   shift, and go to state 80
    VOID       shift, and go to state 27
    SHORT      shift, and go to state 28
    LONG       shift, and go to state 29
    DOUBLE     shift, and go to state 30
    SIGNED     shift, and go to state 31
    UNSIGNED   shift, and go to state 32
    ENUM       shift, and go to state 33
    STRUCT     shift, and go to state 34
    UNION      shift, and go to state 35

    type_specifier             go to state 81
    type_qualifier             go to state 82
    struct_or_union            go to state 54
    type_name                  go to state 83
    specifier_qualifier_list   go to state 84
    struct_or_union_specifier  go to state 62
    enum_specifier             go to state 66


State 37

   17 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 85

    declaration_list  go to state 86


State 38

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


State 39

   14 compound_statement: LCURL var_declaration . statements RCURL
   18 var_declaration: var_declaration . type_specifier declaration_list SEMICOLON
